--- a/index.html
+++ b/index.html
@@ -17,24 +17,8 @@ section: front
         <p>Develop iPhone and iPad Apps in Java with RoboVM</p>
       </div>
       <div class="span3 get-started">
-        <p><a href="http://download.robovm.org/robovm-{{site.robovm.version}}.tar.gz" class="btn btn-primary btn-large">Download&nbsp;&raquo;</a></p>
+        <p><a href="docs.html#quick-start" class="btn btn-primary btn-large">Let's go!&nbsp;&raquo;</a></p>
         <p>
-          <a href="docs.html#getting-started">Installation&nbsp;instructions&nbsp;&raquo;</a><br/>
-          <a id="update-site-link" href="#">Get&nbsp;the&nbsp;Eclipse&nbsp;plug-in&nbsp;&raquo;</a>
-          <div id="update-site-popover" style="display: none;">To install RoboVM for Eclipse, open Eclipse, go to <em>Help &rarr; Install New Software</em>, 
-            and paste this URL into the dialog box. Then, follow the on-screen instructions from there.
-            <div class="update-site-url">http://download.robovm.org/eclipse/</div>
-          </div>
-          <script type="text/javascript">
-            $(document).ready(function() {
-              var content = $("#update-site-popover").html();
-              $('#update-site-link').clickover({
-                html: true, 
-                placement: 'bottom', 
-                content: content
-              });
-            });
-          </script>
         </p>
       </div>
     </div>
