--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ section: front
         <p>Develop iPhone and iPad Apps in Java with RoboVM</p>
       </div>
       <div class="span3 get-started">
-        <p><a href="docs.html#quick-start" class="btn btn-primary btn-large">Let's go!&nbsp;&raquo;</a></p>
+        <p><a href="docs.html#quick-start" class="btn btn-primary btn-large">Quick Start&nbsp;&raquo;</a></p>
         <p>
         </p>
       </div>
