--- a/docs.html
+++ b/docs.html
@@ -69,7 +69,7 @@ sudo sh -c 'curl "http://download.robovm.org/icudt48l.dat" > /usr/share/icu/icud
           </p>
 
           <p>
-            Install the <em>RoboVM for Eclipse</em> plugin from the following update site:
+            Install the <em>RoboVM for Eclipse</em> plugin from the Eclipse Marketplace or use the following update site:
           </p>
           <pre>http://download.robovm.org/eclipse/</pre>
           <p>
