--- a/docs.html
+++ b/docs.html
@@ -73,7 +73,7 @@ sudo sh -c 'curl "http://download.robovm.org/icudt48l.dat" > /usr/share/icu/icud
           </p>
           <pre>http://download.robovm.org/eclipse/</pre>
           <p>
-            Create a new <em>RoboVM Cocoa Touch Project</em> project. Enter 
+            Create a new <em>RoboVM iOS Project</em> project. Enter 
             <code>IOSDemo</code> as project name, app name and main class. Enter <code>org.robovm.IOSDemo</code> 
             as app id.
           </p>
