--- a/docs.html
+++ b/docs.html
@@ -44,6 +44,10 @@ section: docs
           <p>
             Get <a href="https://itunes.apple.com/us/app/xcode/id497799835?mt=12">Xcode 5.0.1 from the Mac App Store</a>
           </p>
+          <div class="alert alert-info">
+            <strong>Note!</strong> The first time you install Xcode and every time you update to a new version
+            you have to open it once to agree to the Xcode terms.
+          </div>
 
           <h3>Ubuntu 12.04</h3>
 <pre>
